--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@rettersoft/rio-cli",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "Retter.io Command Line Tool",
   "main": "./dist/index.js",
   "bin": {
     "rio": "./dist/index.js"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
   },
   "scripts": {
     "build": "tsc -b",
@@ -13,10 +17,6 @@
     "patch-release": "npm version patch && npm run build && npm publish --access public",
     "postinstall": "node ./dist/bootstrap.js postinstall",
     "preuninstall": "node ./dist/bootstrap.js preuninstall"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rettersoft/rio-cli.git"
   },
   "dependencies": {
     "@retter/rio-generator": "1.0.1",
@@ -43,6 +43,10 @@
     "ts-node": "10.4.0",
     "typescript": "4.3.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rettersoft/rio-cli.git"
+  },
   "keywords": [
     "rio",
     "cli",
@@ -51,7 +55,7 @@
     "tool",
     "retter.io"
   ],
-  "author": "retter.io",
+  "author": "@rettersoft",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rettersoft/rio-cli/issues"
