--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "link": "npm run build && npm link"
   },
   "dependencies": {
-    "@retter/rio-generator": "1.0.5",
+    "@retter/rio-generator": "1.0.7",
     "@retter/sdk": "0.2.22",
     "adm-zip": "0.5.9",
     "axios": "0.24.0",
@@ -29,6 +29,7 @@
     "jsonwebtoken": "8.5.1",
     "prompts": "2.4.2",
     "table": "^6.8.0",
+    "typedoc": "0.21.9",
     "yaml": "1.10.2",
     "yargs": "17.3.0"
   },
