--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "link": "npm run build && npm link"
   },
   "dependencies": {
-    "@retter/rio-generator": "1.0.8",
+    "@retter/rio-generator": "1.0.9",
     "@retter/sdk": "0.2.22",
     "adm-zip": "0.5.9",
     "axios": "0.24.0",
     "chalk": "4.1.2",
     "fs-extra": "10.0.0",
+    "ignore": "5.2.0",
     "jsonwebtoken": "8.5.1",
+    "listr": "0.14.3",
     "prompts": "2.4.2",
-    "table": "^6.8.0",
-    "typedoc": "0.21.9",
+    "table": "6.8.0",
     "yaml": "1.10.2",
     "yargs": "17.3.0"
   },
@@ -39,10 +40,11 @@
     "@types/fs-extra": "9.0.13",
     "@types/jest": "27.4.0",
     "@types/jsonwebtoken": "8.5.6",
+    "@types/listr": "0.14.4",
     "@types/node": "12.12.6",
     "@types/prompts": "2.0.14",
     "@types/yargs": "17.0.7",
-    "jest": "27.4.7",
+    "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
     "typescript": "4.3.5"
   },
