--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "tsc --build --clean && rm -rf dist",
     "test": "jest",
     "patch-release": "npm version patch && npm run build && npm publish --access public",
+    "minor-release": "npm version minor && npm run build && npm publish --access public",
+    "major-release": "npm version major && npm run build && npm publish --access public",
     "postinstall": "node ./dist/bootstrap.js postinstall",
     "preuninstall": "node ./dist/bootstrap.js preuninstall",
     "link": "npm run build && npm link"
