--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "adm-zip": "0.5.9",
     "axios": "0.24.0",
     "chalk": "4.1.2",
+    "chokidar": "^3.5.3",
     "fs-extra": "10.0.0",
     "ignore": "5.2.0",
     "jsonwebtoken": "8.5.1",
