--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "link": "npm run build && npm link"
   },
   "dependencies": {
-    "@retter/rio-generator": "1.0.10",
+    "@retter/rio-generator": "1.0.11",
     "@retter/sdk": "0.2.27",
     "adm-zip": "0.5.9",
     "axios": "0.24.0",
     "chalk": "4.1.2",
-    "chokidar": "^3.5.3",
+    "chokidar": "3.5.3",
     "fs-extra": "10.0.0",
     "ignore": "5.2.0",
     "jsonwebtoken": "8.5.1",
