--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "listr": "0.14.3",
     "prompts": "2.4.2",
     "table": "6.8.0",
-    "yaml": "1.10.2",
     "yargs": "17.3.0"
   },
   "devDependencies": {
@@ -49,7 +48,8 @@
     "@types/yargs": "17.0.7",
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "yaml": "^1.10.2"
   },
   "repository": {
     "type": "git",
