--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "listr": "0.14.3",
     "prompts": "2.4.2",
     "table": "6.8.0",
+    "yaml": "1.10.2",
     "yargs": "17.3.0"
   },
   "devDependencies": {
@@ -45,11 +46,12 @@
     "@types/listr": "0.14.4",
     "@types/node": "12.12.6",
     "@types/prompts": "2.0.14",
+    "@types/readable-stream": "2.3.13",
+    "@types/urijs": "1.19.18",
     "@types/yargs": "17.0.7",
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
-    "typescript": "4.3.5",
-    "yaml": "^1.10.2"
+    "typescript": "4.3.5"
   },
   "repository": {
     "type": "git",
