--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ignore": "5.2.0",
     "jsonwebtoken": "8.5.1",
     "listr": "0.14.3",
+    "lodash": "4.17.21",
     "prompts": "2.4.2",
     "table": "6.8.0",
     "yaml": "1.10.2",
@@ -44,6 +45,7 @@
     "@types/jest": "27.4.0",
     "@types/jsonwebtoken": "8.5.6",
     "@types/listr": "0.14.4",
+    "@types/lodash": "4.14.179",
     "@types/node": "12.12.6",
     "@types/prompts": "2.0.14",
     "@types/readable-stream": "2.3.13",
