--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@retter/rio-cli",
-  "version": "1.15.1-development",
+  "version": "1.16.0-deployment",
   "description": "Retter.io Command Line Tool",
   "main": "./dist/index.js",
   "bin": {
