--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "major-release": "npm version major && npm run build && npm publish --access public",
     "postinstall": "node ./dist/bootstrap.js postinstall",
     "preuninstall": "node ./dist/bootstrap.js preuninstall",
-    "link": "npm run build && npm link"
+    "link": "npm run clean && npm run build && npm link"
   },
   "dependencies": {
     "@retter/rio-generator": "1.3.3",
