--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "patch-release": "npm version patch && npm run build && npm publish --access public",
     "minor-release": "npm version minor && npm run build && npm publish --access public",
     "major-release": "npm version major && npm run build && npm publish --access public",
-    "postinstall": "node ./dist/bootstrap.js postinstall",
+    "postinstall": "npm run clean && npm run build && node ./dist/bootstrap.js postinstall",
     "preuninstall": "node ./dist/bootstrap.js preuninstall",
     "link": "npm run clean && npm run build && npm link"
   },
